Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="pictures" class="anchor" href="#pictures" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pictures</h3>
 
-<p><img src="http://imgur.com/HCBpHfO" alt=""></p>
+<p><img src="http://i.imgur.com/HCBpHfO.jpg" alt=""></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
